<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


           <ImageView
               android:id="@+id/ivDocument"
               android:layout_width="50dp"
               android:layout_height="50dp"
               android:src="@drawable/document"
               android:scaleType="centerInside"
               android:adjustViewBounds="true"
               android:layout_marginBottom="20dp"
               android:layout_gravity="center"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/cv_builder_app"
               android:textColor="@color/black"
               android:textSize="24sp"
               android:textStyle="bold"
               android:gravity="center"
               android:layout_marginBottom="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">



            <Button
                android:id="@+id/btnProfilePicture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_picture"
                android:layout_margin="8dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnPersonalDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_details"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/btnSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/btnEducation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/btnExperience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/btnCertifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/certifications"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/btnReferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/references"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/btnPreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview_cv"
            android:textColor="@color/white"
            android:layout_margin="8dp"
            android:backgroundTint="@color/black" />


    </LinearLayout>
</ScrollView>