<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilePictureActivity"
    android:orientation="vertical"
    android:background="@color/background">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/choose_a_profile_picture"
       android:textColor="@color/black"
       android:textSize="20sp"
       android:textStyle="bold"
       android:layout_marginBottom="16dp"
       android:gravity="center"
       />

   <ImageView
       android:layout_width="200dp"
       android:layout_height="200dp"
      android:id="@+id/profileImageView"
      android:layout_gravity="center"
      android:layout_margin="16dp"
       android:contentDescription="@string/select_a_profile_picture"
       android:src="@drawable/profile_picture_place_holder"
      android:scaleType="centerCrop"/>

   <Button
       android:id="@+id/btnPickImage"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/select_picture_from_your_gallery" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="24dp">

      <Button
          android:id="@+id/btnSave"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/save"
          android:layout_marginEnd="8dp" />

      <Button
          android:id="@+id/btnCancel"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/cancel"
          android:layout_marginStart="8dp" />
   </LinearLayout>

</LinearLayout>