<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/editTextPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="position"
            android:hint="@string/position_role"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/editTextCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Company"
            android:hint="@string/company_organization"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/editTextDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/duration_e_g_jan_2024_present"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Job"
            android:hint="@string/job_description"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:gravity="top|start" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>