<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@color/background"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/btnDelete"
            android:text="@string/software_engineer"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@id/textViewPosition"
            android:layout_toStartOf="@id/btnDelete"
            android:text="@string/tech_solutions_inc"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@id/textViewCompany"
            android:layout_toStartOf="@id/btnDelete"
            android:text="@string/jan_2024_present"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@id/textViewDuration"
            android:layout_toStartOf="@id/btnDelete"
            android:layout_marginTop="4dp"
            android:text="@string/developed_mobile_applications_and_implemented_new_features"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:drawable/ic_delete" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>