<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="4dp"
    android:background="@color/background"
    card_view:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewDegree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/btnDelete"
            android:text="@string/bachelor_of_computer_science"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/textViewInstitution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewDegree"
            android:layout_toStartOf="@id/btnDelete"
            android:text="@string/national_university_of_computer_and_emerging_sciences"
            android:textSize="16sp"
            android:layout_margin="20dp" />

        <TextView
            android:id="@+id/textViewYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewInstitution"
            android:layout_toStartOf="@id/btnDelete"
            android:text="@string/_2025"
            android:textSize="14sp"
            android:layout_margin="20dp" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:drawable/ic_delete"
            android:layout_margin="5dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>